build: improvements in call, messages and account settings

--- a/frontend/src/components/Nav.astro
+++ b/frontend/src/components/Nav.astro
@@ -23,13 +23,13 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar'
 		<MenuItems class="test hidden lg:flex">
 			<ul class="flex flex-col lg:flex-row lg:gap-5">
 				<li class="separator-mob">- - -</li>
-				<li><a href="/">Home</a></li>
+				<li><a href="/">Réunion</a></li>
 				<li class="separator">/</li>
 				<li class="separator-mob">- - -</li>
 				<li><a href="/messages">Messages</a></li>
 				<li class="separator">/</li>
 				<li class="separator-mob">- - -</li>
-				<li><a href="/account">Account</a></li>
+				<li><a href="/account">Compte</a></li>
 			</ul>
 		</MenuItems>
 	</Astronav>
