--- a/frontend/src/pages/account.astro
+++ b/frontend/src/pages/account.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout.astro';
 <div class="container mx-auto ">
    <div class="max-w-md mx-auto p-8 rounded">
       <div class="flex-none bg-neutral-800 p-4 rounded-md shadow-md mb-8">
-         <h1 class="text-gray-50 text-3xl">Configuration de compte</h1>
+         <h1 class="text-gray-50 text-3xl text-center">Configuration - compte</h1>
        </div>
        <form action="#" method="post">
               <!-- Nom  du serveur -->
