--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -7,56 +7,60 @@ import Layout from '../layouts/Layout.astro';
 	seoDesc="###"
 >
 
-<div class="flex flex-col h-screen bg-neutral-900 rounded-md mt-8">
-	<div class="flex-none bg-neutral-800 p-4 rounded-md shadow-md">
-	  <h1 class="text-gray-50 text-3xl">WebRTC App</h1>
-	</div>
 
-	<div class="flex flex-col flex-grow justify-center p-4 space-y-4">
-	  <div class="max-w-md bg-neutral-800 p-6 rounded-md shadow-md">
-		 <h2 class="text-2xl font-semibold mb-4">Call ID's</h2>
-		 <div class="overflow-y-auto max-h-40 ">
-			<ul class="divide-y divide-gray-300">
-			  <li class="py-2">Caller ID 1 <button class="bg-teal-500 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded shadow">
-				Appeler
-			 </button></li>
-			  <li class="py-2">Caller ID 2 <button class="bg-teal-500 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded shadow">
-				Appeler
-			 </button></li>
-			  <li class="py-2">Caller ID 3 <button class="bg-teal-500 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded shadow">
-				Appeler
-			 </button></li>
-			  <li class="py-2">Caller ID 4 <button class="bg-teal-500 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded shadow">
-				Appeler
-			 </button></li>
-			  <li class="py-2">Caller ID 5 <button class="bg-teal-500 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded shadow">
-				Appeler
-			 </button></li>
-			  <li class="py-2">Caller ID 6 <button class="bg-teal-500 hover:bg-teal-700 text-white font-semibold py-2 px-4 rounded shadow">
-				Appeler
-			 </button></li>
-			</ul>
+<div class="flex flex-col bg-neutral-900 rounded-md">
+	<div class="flex-none bg-neutral-800 p-4 rounded-md shadow-md flex flex-col">
+		<h1 class="text-2xl font-bold"> Entrer dans une salle de réunion </h1>
+		<div class="grid grid-rows-1 mt-2">
+		  <input id="server" name="server" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-teal-500 bg-neutral-700 col-span-6" placeholder="Numéro de votre salle de réunion" />
+		  <button type="submit" class="font-semibold w-full bg-teal-500 text-white px-4 py-2 rounded-md hover:bg-teal-700 focus:outline-none col-start-8">
+			Rejoindre la salle de réunion
+		 </button>
+		</div>
+	 </div>
+	 
+
+ 
+	<!-- Partie fixe pour la vidéo avec une hauteur personnalisée -->
+	<div class="relative flex-grow">
+		<div class="sticky top-0 bg-neutral-800 p-4 rounded-md shadow-md h-16 my-8 min-h-[300px] flex items-center justify-center">
+			<!-- Ajoutez ici le code pour l'animation avec l'icône du bonhomme -->
+			<div class="rounded-md p-4 max-w-sm w-full mx-auto">
+				<div class="animate-pulse">
+				  <h1 class="text-teal-300 opacity-50 text-xl text-center">En attente de la connexion à la réunion</h1>
+				</div>
+			 </div>
+			 
+
+
 		 </div>
-	  </div>
+		 
  
-	  <div class="max-w-md bg-neutral-800 p-6 rounded-md shadow-md">
-		 Video stream
-	  </div>
- 
-	  <div class=" bg-neutral-800 p-4 rounded-md shadow-md">
-		 <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
-			Abandonner l'appel
-		 </button>
-		 <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
-			Mute microphone
-		 </button>
-		 <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">
-			Mute camera
-		 </button>
-
-	  </div>
+	  <!-- Contenu principal -->
+	  <div class="bg-neutral-800 p-4 rounded-md flex justify-center items-center space-x-8">
+		<button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center">
+		  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
+			 <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+		  </svg>
+		  Abandonner l'appel
+		</button>
+		<button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center">
+		  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
+			 <path stroke-linecap="round" stroke-linejoin="round" d="M12 18.75a6 6 0 006-6v-1.5m-6 7.5a6 6 0 01-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 01-3-3V4.5a3 3 0 116 0v8.25a3 3 0 01-3 3z" />
+		  </svg>
+		  Mute microphone
+		</button>
+		<button class="bg-white hover-bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center">
+		  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
+			 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5l4.72-4.72a.75.75 0 011.28.53v11.38a.75.75 0 01-1.28.53l-4.72-4.72M12 18.75H4.5a2.25 2.25 0 01-2.25-2.25V9m12.841 9.091L16.5 19.5m-1.409-1.409c.407-.407.659-.97.659-1.591v-9a2.25 2.25 0 00-2.25-2.25h-9c-.621 0-1.184.252-1.591.659m12.182 12.182L2.909 5.909M1.5 4.5l1.409 1.409" />
+		  </svg>
+		  Mute camera
+		</button>
+	 </div>
+	 
 	</div>
  </div>
+ 
  
  
 </Layout>
