--- a/frontend/src/pages/messages.astro
+++ b/frontend/src/pages/messages.astro
@@ -7,7 +7,7 @@ import Layout from '../layouts/Layout.astro';
 	seoDesc="###"
 >
 <div class="bg-neutral-800 text-white p-4 rounded-md shadow-md mt-8">
-   <h1 class="text-2xl font-semibold">Chat de Messagerie</h1>
+   <h1 class="text-2xl font-semibold">Messagerie</h1>
  </div>
 
  <!-- Zone de chat -->
