build: adding SSR adapter (express.js)
- Changing adapter to SSR adapter express.js.
- Adding pretierrc config for Pretiter extension.

--- a/frontend/src/components/Footer.astro
+++ b/frontend/src/components/Footer.astro
@@ -8,10 +8,10 @@
 	>
 </footer>
 
-<script>
+<!-- <script>
 	document.querySelector('#copyright').textContent = new Date().getFullYear().toString()
 </script>
-
+ -->
 <style>
 	a {
 		opacity: 0.7;
