--- a/frontend/src/components/Nav.astro
+++ b/frontend/src/components/Nav.astro
@@ -3,7 +3,7 @@ import { Astronav, MenuItems, MenuIcon } from 'astro-navbar'
 ---
 
 <header class="gap-5 p-5 lg:flex">
-	<Astronav class="navbar">
+	<Astronav>
 		<svg class="icon mt-1" xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 640 512"
 			><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
 			<style>
