--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -12,8 +12,8 @@ import Layout from '../layouts/Layout.astro';
 	<div class="flex-none bg-neutral-800 p-4 rounded-md shadow-md flex flex-col">
 		<h1 class="text-2xl font-bold"> Entrer dans une salle de réunion </h1>
 		<div class="grid grid-rows-1 mt-2">
-		  <input id="server" name="server" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-teal-500 bg-neutral-700 col-span-6" placeholder="Numéro de votre salle de réunion" />
-		  <button type="submit" class="font-semibold w-full bg-teal-500 text-white px-4 py-2 rounded-md hover:bg-teal-700 focus:outline-none col-start-8">
+		  <input id="room-input" name="room" class="w-full px-4 py-2 border rounded-md focus:outline-none focus:border-teal-500 bg-neutral-700 col-span-6" placeholder="Numéro de votre salle de réunion" />
+		  <button id="connect-button" type="submit" class="font-semibold w-full bg-teal-500 text-white px-4 py-2 rounded-md hover:bg-teal-700 focus:outline-none col-start-8">
 			Rejoindre la salle de réunion
 		 </button>
 		</div>
@@ -29,8 +29,11 @@ import Layout from '../layouts/Layout.astro';
 				<div class="animate-pulse">
 				  <h1 class="text-teal-300 opacity-50 text-xl text-center">En attente de la connexion à la réunion</h1>
 				</div>
-			 </div>
-			 
+				<div id="video-chat-container" class="video-position" style="display: none">
+					<!-- Les vidéos locales et distantes seront placées ici -->
+					<video id="local-video" autoplay muted></video>
+				 </div>
+			</div>
 
 
 		 </div>
@@ -50,7 +53,7 @@ import Layout from '../layouts/Layout.astro';
 		  </svg>
 		  Mute microphone
 		</button>
-		<button class="bg-white hover-bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center">
+		<button class="bg-white hover-bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400	 rounded shadow flex items-center">
 		  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
 			 <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5l4.72-4.72a.75.75 0 011.28.53v11.38a.75.75 0 01-1.28.53l-4.72-4.72M12 18.75H4.5a2.25 2.25 0 01-2.25-2.25V9m12.841 9.091L16.5 19.5m-1.409-1.409c.407-.407.659-.97.659-1.591v-9a2.25 2.25 0 00-2.25-2.25h-9c-.621 0-1.184.252-1.591.659m12.182 12.182L2.909 5.909M1.5 4.5l1.409 1.409" />
 		  </svg>
@@ -62,5 +65,7 @@ import Layout from '../layouts/Layout.astro';
  </div>
  
  
- 
+ <script src="/socket.io/socket.io.js" type="text/javascript" is:inline></script>
+ <script src="scripts/client.js" type="text/javascript"></script>
+
 </Layout>
