--- a/webrtc-ssr/src/pages/index.astro
+++ b/webrtc-ssr/src/pages/index.astro
@@ -33,7 +33,7 @@ import Layout from '../layouts/Layout.astro';
 		  grid-template-rows: 1fr 1fr; / Deux rangées */
 		  gap: 10px;
 		  width: 100vw;
-		  height: 100vh;
+		  height: 30vh;
 		  padding: 10px;
 		}
 	
@@ -73,7 +73,7 @@ import Layout from '../layouts/Layout.astro';
 				<div class="animate-pulse">
 					<h1 class="text-teal-300 opacity-50 text-xl text-center">En attente de la connexion à la réunion</h1>
 				</div>
-				
+
 			</div>
 			<div id="room-selection-container" class="centered">
 				<h1>WebRTC video conference</h1>
@@ -86,25 +86,24 @@ import Layout from '../layouts/Layout.astro';
 				<!-- Les vidéos locales et distantes seront placées ici -->
 				<video id="local-video" autoplay muted></video>
 			  </div>
-
-
 		</div>
+  </div>
 
 	<!-- Contenu principal -->
 	<div class="bg-neutral-800 p-4 rounded-md flex justify-center items-center space-x-8">
-		<button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center">
+		<button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center" id="hangup-button">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
 				<path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
 			</svg>
 			Abandonner l'appel
 		</button>
-		<button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center">
+		<button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow flex items-center" id="toggle-mic-button">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
 				<path stroke-linecap="round" stroke-linejoin="round" d="M12 18.75a6 6 0 006-6v-1.5m-6 7.5a6 6 0 01-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 01-3-3V4.5a3 3 0 116 0v8.25a3 3 0 01-3 3z" />
 			</svg>
 			Mute microphone
 		</button>
-		<button class="bg-white hover-bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400	 rounded shadow flex items-center">
+		<button class="bg-white hover-bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400	 rounded shadow flex items-center" id="toggle-camera-button">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 mr-2">
 				<path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5l4.72-4.72a.75.75 0 011.28.53v11.38a.75.75 0 01-1.28.53l-4.72-4.72M12 18.75H4.5a2.25 2.25 0 01-2.25-2.25V9m12.841 9.091L16.5 19.5m-1.409-1.409c.407-.407.659-.97.659-1.591v-9a2.25 2.25 0 00-2.25-2.25h-9c-.621 0-1.184.252-1.591.659m12.182 12.182L2.909 5.909M1.5 4.5l1.409 1.409" />
 			</svg>
@@ -116,7 +115,7 @@ import Layout from '../layouts/Layout.astro';
 
 <script src="/socket.io/socket.io.js" type="text/javascript" is:inline></script>
 <script type="text/javascript">
-	// DOM elements.
+// DOM elements.
 const roomSelectionContainer = document.getElementById('room-selection-container');
 const roomInput = document.getElementById('room-input');
 const connectButton = document.getElementById('connect-button');
@@ -142,6 +141,15 @@ const iceServers = {
 connectButton.addEventListener('click', () => {
   joinRoom(roomInput.value);
 });
+
+const hangUpButton = document.getElementById('hangup-button');
+const toggleMicButton = document.getElementById('toggle-mic-button');
+const toggleCameraButton = document.getElementById('toggle-camera-button');
+
+hangUpButton.addEventListener('click', hangUpCall);
+toggleMicButton.addEventListener('click', toggleMicrophone);
+toggleCameraButton.addEventListener('click', toggleCamera);
+
 
 // SOCKET EVENT CALLBACKS
 socket.on('room_created', async () => {
@@ -316,6 +324,37 @@ function handleRemoteStreamAdded(stream, peerId) {
 
   remoteVideoElement.srcObject = stream;
 }
+
+function hangUpCall() {
+  console.log("Hang Up Call");
+  for (let peerId in peerConnections) {
+    peerConnections[peerId].close();
+    delete peerConnections[peerId];
+  }
+
+  if (localStream) {
+    localStream.getTracks().forEach(track => track.stop());
+    localStream = null;
+  }
+
+  // Cacher la zone de vidéo conférence et montrer la sélection de salle
+  videoChatContainer.style.display = 'none';
+  roomSelectionContainer.style.display = 'block';
+}
+
+function toggleMicrophone() {
+  console.log("Before toggling, microphone enabled:", localStream.getAudioTracks()[0].enabled);
+  localStream.getAudioTracks()[0].enabled = !localStream.getAudioTracks()[0].enabled;
+  console.log("After toggling, microphone enabled:", localStream.getAudioTracks()[0].enabled);
+}
+
+function toggleCamera() {
+  console.log("Before toggling, camera enabled:", localStream.getVideoTracks()[0].enabled);
+  localStream.getVideoTracks()[0].enabled = !localStream.getVideoTracks()[0].enabled;
+  console.log("After toggling, camera enabled:", localStream.getVideoTracks()[0].enabled);
+}
+
+
 </script>
 
 </Layout>
